testdata/test/resources/com/yafred/asn1/test/should_fail/sequence_duplicate_tag3.asn
-- FAILS: duplicate tag (optional or default component must have distinct tags)

Sequence DEFINITIONS ::= BEGIN

A ::= SEQUENCE {
	a INTEGER
}

T ::= SEQUENCE { 
	x INTEGER,
	y INTEGER OPTIONAL,
	z INTEGER DEFAULT 0,
	COMPONENTS OF A
}


END